--- a/Guided Project_ Analyzing CIA Factbook Data Using SQL/Basics.ipynb
+++ b/Guided Project_ Analyzing CIA Factbook Data Using SQL/Basics.ipynb
@@ -618,7 +618,7 @@
     "collapsed": true
    },
    "source": [
-    "## Exploring Average Population and Area\n",
+    "## Summary Statistics Revisited: Exploring Average Population and Area\n",
     "\n",
     "Recalculating the summary statistics by excluding the row for the whole world.\n",
     "\n",
