--- a/Guided Project_ Analyzing CIA Factbook Data Using SQL/Basics.ipynb
+++ b/Guided Project_ Analyzing CIA Factbook Data Using SQL/Basics.ipynb
@@ -28,7 +28,7 @@
     "collapsed": true
    },
    "source": [
-    "### Installing SQL for Jupyter using conda\n",
+    "### Installing SQL for Jupyter\n",
     "\n",
     "If you have not installed the SQL for Jupyter"
    ]
@@ -42,8 +42,6 @@
    "outputs": [],
    "source": [
     "# !pip install ipython-sql\n",
-    "# import sys\n",
-    "# !{sys.executable} -m pip install ipython-sql"
    ]
   },
   {
