--- a/Guided Project_ Analyzing CIA Factbook Data Using SQL/Basics.ipynb
+++ b/Guided Project_ Analyzing CIA Factbook Data Using SQL/Basics.ipynb
@@ -42,6 +42,8 @@
    "outputs": [],
    "source": [
     "# !pip install ipython-sql\n",
+    "# import sys\n",
+    "# !{sys.executable} -m pip install ipython-sql"
    ]
   },
   {
